SA-19. fixed scrollbar showing issue when content is not overflowing

--- a/components/tailored/core/sidebar/Sidebar.less
+++ b/components/tailored/core/sidebar/Sidebar.less
@@ -49,7 +49,7 @@
 
   .scrolling {
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     ::-webkit-scrollbar {
       display: none;
