--- a/layouts/files/Files.less
+++ b/layouts/files/Files.less
@@ -42,7 +42,7 @@
     #chat {
       width: 100%;
       flex: 1;
-      overflow-y: scroll;
+      overflow-y: auto;
       position: relative;
     }
 
