--- a/layouts/friends/Friends.less
+++ b/layouts/friends/Friends.less
@@ -46,7 +46,7 @@
     #chat {
       width: 100%;
       flex: 1;
-      overflow-y: scroll;
+      overflow-y: auto;
       position: relative;
     }
 
